# vigb-decoder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
benches/: decoder.rs
docs/: cli.md  credits.md  decoder.md  format.md  provenance.md  release-checklist.md
docs/superpowers/plans/: 2026-05-10-rust-port-implementation.md
docs/superpowers/reviews/: 2026-05-10-pre-publish-review.md
docs/superpowers/specs/: 2026-05-10-rust-port-design.md
python-reference/: README.md  max2pdf.py  vigb_max2pdf.py
src/: bitstream.rs  ccitt.rs  chunks.rs  config.rs  decoder.rs  dispatch.rs  error.rs  lib.rs  pdf.rs  preview.rs
tests/: corpus.rs  heuristics.rs  malformed.rs  synthetic.rs
tests/common/: encoder.rs  mod.rs
tests/fixtures/: synthetic.max  synthetic.pbm
tools/encode-fixture/: main.rs
