[package]
name = "vigb-decoder"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/creggch/vigb-decoder"
description = "Decoder for PaperPort 2 .max (ViGBe) image scans (1986–87 era)"
keywords = ["paperport", "max", "ccitt", "decoder", "retro"]
categories = ["multimedia::images", "command-line-utilities"]
readme = "README.md"

[lib]
name = "vigb_decoder"
path = "src/lib.rs"

[[bin]]
name = "max2pdf"
path = "src/bin/max2pdf.rs"

[dependencies]
thiserror = "2"

[dependencies.clap]
version = "4"
features = ["derive"]

[dev-dependencies]
anyhow = "1"
insta = { version = "1", features = ["yaml"] }
criterion = "0.5"

[features]
default = []
corpus = []   # Local-only feature: enables tests/corpus.rs against personal archive

[profile.release]
lto = "thin"
codegen-units = 1
