[package]
name = "vigb-decoder"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/creggch/vigb-decoder"
description = "Decoder for PaperPort 2 .max (ViGBe) image scans (1986–87 era)"
keywords = ["paperport", "max", "ccitt", "decoder", "retro"]
categories = ["multimedia::images", "command-line-utilities"]
readme = "README.md"
exclude = [
    # Python reference decoder — visible in the GitHub repo but not part
    # of the crates.io package.
    "python-reference/",
]

[lib]
name = "vigb_decoder"
path = "src/lib.rs"

[[bin]]
name = "vigb-max2pdf"
path = "src/bin/vigb-max2pdf.rs"

[[bin]]
name = "encode-fixture"
path = "tools/encode-fixture/main.rs"
# Internal fixture generator — not installed by `cargo install vigb-decoder`.
# Build with: cargo run --features fixture-tool --bin encode-fixture
required-features = ["fixture-tool"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
insta = { version = "1", features = ["yaml"] }
criterion = "0.5"

[features]
default = []
corpus = []        # Local-only feature: enables tests/corpus.rs against personal archive
fixture-tool = []  # Gates the internal encode-fixture binary out of `cargo install`

[profile.release]
lto = "thin"
codegen-units = 1

[[bench]]
name = "decoder"
harness = false
